# uqload-downloader-python

./: .gitignore  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  uqload.py  video_downloader.py
tests/: test_cli.py  test_file_downloader.py  test_parallel_url_fetcher.py  test_progress_bar.py  test_uqload.py  test_url_fetcher.py  test_utils.py
tests/html/: embed.html  embed_only.html  embed_video_not_found.html  home.html  home_video_not_found.html
uqload_dl/: __init__.py  cli.py  exceptions.py  file_downloader.py  parallel_url_fetcher.py  progress_bar.py  uqload.py  url_fetcher.py  utils.py
validations/: input_validations.py
